--- a/VG.html
+++ b/VG.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Webshop</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script src= "https://kit.fontawesome.com/f4bf10d3c2.js"></script>
     <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="flex.css">
+    <link rel="stylesheet" href="layout.css">
 </head>
-<div class="d-flex ">
-
+<header>
+<div class="d-flex bg-primary bar-height-lg align-items-center ">
+    <div class="d-flex "></div>
+    <a href="#" class="d-flex text-decoration-none">
+        <div class="d-flex align-items-center justify-content-center bg-white border-radius p-4 shadow-sm">
+            <i class="btn-primary border-color-white fa fa-user text-white line-height-sm text-size-xxs"> John</i>
+        </div>
+    </a>
+    <div class="d-flex flex-grow align-items-center justify-content-right text-size-xxs mr-4">
+        <i class="fas fa-phone-alt text-white ml-4"></i>
+        <span class="text-white ml-4 ">+00 123 123 123</span>
+        <div class="d-flex  align-items-center  mb-2 ml-2 ">
+            <i class="fas fa-envelope-open-text text-white ml-4 "></i>
+            <span class="text-white ml-4">info@mystore.com</span>
+        </div>
+    </div>
 </div>
+</header>
 <body>
     
 </body>
