--- a/VG.html
+++ b/VG.html
@@ -7,29 +7,32 @@
     <title>Webshop</title>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src= "https://kit.fontawesome.com/f4bf10d3c2.js"></script>
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="flex.css">
     <link rel="stylesheet" href="layout.css">
 </head>
 <header>
-<div class="d-flex bg-primary bar-height-lg align-items-center ">
-    <div class="d-flex "></div>
-    <a href="#" class="d-flex text-decoration-none">
-        <div class="d-flex align-items-center justify-content-center bg-white border-radius p-4 shadow-sm">
-            <i class="btn-primary border-color-white fa fa-user text-white line-height-sm text-size-xxs"> John</i>
-        </div>
-    </a>
-    <div class="d-flex flex-grow align-items-center justify-content-right text-size-xxs mr-4">
+<div class="d-flex bg-primary bar-height-lg align-items-center">
+
+    <div class="dropdown dropdown-content-a">
+        <button class="dropbtn fas fa-user text-white bg-primary border-radius border-small-white p-4 ml-4 text-size-md">John
+            <i class="fa fa-caret-down"></i>
+        </button>    
+    </div>
+    
+    <div class="d-flex flex-grow align-items-center justify-content-right text-size-sm mr-4">
         <i class="fas fa-phone-alt text-white ml-4"></i>
         <span class="text-white ml-4 ">+00 123 123 123</span>
         <div class="d-flex  align-items-center  mb-2 ml-2 ">
             <i class="fas fa-envelope-open-text text-white ml-4 "></i>
             <span class="text-white ml-4">info@mystore.com</span>
         </div>
+
     </div>
 </div>
 </header>
 <body>
-    
 </body>
 </html>
