--- a/VG.html
+++ b/VG.html
@@ -8,20 +8,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src= "https://kit.fontawesome.com/f4bf10d3c2.js"></script>
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="flex.css">
     <link rel="stylesheet" href="layout.css">
 </head>
+<!-- Navigation grå -->
 <header>
 <div class="d-flex bg-primary bar-height-lg align-items-center">
-
     <div class="dropdown dropdown-content-a">
         <button class="dropbtn fas fa-user text-white bg-primary border-radius border-small-white p-4 ml-4 text-size-md">John
             <i class="fa fa-caret-down"></i>
         </button>    
     </div>
-    
     <div class="d-flex flex-grow align-items-center justify-content-right text-size-sm mr-4">
         <i class="fas fa-phone-alt text-white ml-4"></i>
         <span class="text-white ml-4 ">+00 123 123 123</span>
@@ -29,10 +30,20 @@
             <i class="fas fa-envelope-open-text text-white ml-4 "></i>
             <span class="text-white ml-4">info@mystore.com</span>
         </div>
-
     </div>
 </div>
 </header>
+
+<!-- Search bar -->
+<section class="">
+    <div class="mystore">
+        MY STORE
+    </div>
+    <form class="d-flex align-items-right justify-content-center p-12">
+        <input class="d-flex sfield" type="text" placeholder="Search..">
+        <button class="d-flex sfield-button" type="submit"><i class="fa fa-search"></i></button>
+      </form>
+</section>
 <body>
 </body>
 </html>
