--- a/VG.html
+++ b/VG.html
@@ -34,16 +34,49 @@
 </div>
 </header>
 
+
+
 <!-- Search bar -->
-<section class="">
-    <div class="mystore">
-        MY STORE
-    </div>
-    <form class="d-flex align-items-right justify-content-center p-12">
-        <input class="d-flex sfield" type="text" placeholder="Search..">
-        <button class="d-flex sfield-button" type="submit"><i class="fa fa-search"></i></button>
-      </form>
-</section>
+<nav class="d-flex flex-grow bg-light border-bottom-dark p-4">
+        <div class="d-flex  align-items-center justify-content-center m-4 flex-wrap">
+            <i class="justify-content-center text-uppercase text-bold text-size-xl">My Store</i>
+        </div>        
+        <div class="d-flex flex-grow align-items-center justify-content-center  pr-6 ">
+                <i class="d-flex sfield-button fas fa-search justify-content-center align-items-center border-dark ml-4">
+                </i>
+                <input class="d-flex sfield form-control border-sm border-radius lh-xxl text-size-xl border-dark p-4" size="text-size-xl" type="text" placeholder="Search item..." >
+        </div>
+        <!-- Meny knapparna -->
+        <div class="d-flex justify-content-between ml-4">
+            <a href="#" class="d-flex flex-column align-items-center text-decoration-none position-relative">
+                <div class="d-flex align-items-center justify-content-center  border-radius p-4 ">
+                    <i class="fa fa-heart text-dark lh-lg text-size-xl"></i>
+                </div>
+                <p class="text-size-xs text-dark display-flex align-items-center justify-content-center" > FAVORITES</p>
+                <span class="text-white bg-blue position-absolute icon-badge mt-2 lh-sm border-small-white text-size-xxs">2</span>
+            </a>
+         </div>
+         <div class="d-flex justify-content-between ml-4">
+            <a href="#" class="d-flex flex-column align-items-center text-decoration-none position-relative">
+                <div class="d-flex align-items-center justify-content-center  border-radius p-4 ">
+                    <i class="fa fa-shopping-cart text-dark lh-lg text-size-xl"></i>
+                </div>
+                <p class="text-size-xs text-dark display-flex align-items-center justify-content-center" > $ 5154.60</p>
+                <span class="text-white bg-blue position-absolute icon-badge mt-2 lh-sm border-small-white text-size-xxs">5</span>
+            </a>
+         </div>        <div class="d-flex justify-content-between ml-4">
+            <a href="#" class="d-flex flex-column align-items-center text-decoration-none position-relative">
+                <div class="d-flex align-items-center justify-content-center  border-radius p-4 ">
+                    <i class="fa fa-file-invoice-dollar text-dark lh-lg text-size-xl"></i>
+                </div>
+                <p class="text-size-xs text-dark display-flex align-items-center justify-content-center" > $ 0.00</p>
+                <span class="text-white bg-blue position-absolute icon-badge mt-2 lh-sm border-small-white text-size-xxs">0</span>
+            </a>
+         </div>
+         
+        
+
+</nav>
 <body>
 </body>
 </html>
