--- a/VG.html
+++ b/VG.html
@@ -37,7 +37,7 @@
 
 
 <!-- Search bar -->
-<nav class="d-flex flex-grow bg-light border-bottom-dark p-4">
+<nav class="d-flex flex-grow bg-white border-bottom-dark p-4">
         <div class="d-flex  align-items-center justify-content-center m-4 flex-wrap">
             <i class="justify-content-center text-uppercase text-bold text-size-xl">My Store</i>
         </div>        
@@ -50,7 +50,7 @@
         <div class="d-flex justify-content-between ml-4">
             <a href="#" class="d-flex flex-column align-items-center text-decoration-none position-relative">
                 <div class="d-flex align-items-center justify-content-center  border-radius p-4 ">
-                    <i class="fa fa-heart text-dark lh-lg text-size-xl"></i>
+                    <i class="fa fa-heart text-dark lh-lg text-size-xxl m-2"></i>
                 </div>
                 <p class="text-size-xs text-dark display-flex align-items-center justify-content-center" > FAVORITES</p>
                 <span class="text-white bg-blue position-absolute icon-badge mt-2 lh-sm border-small-white text-size-xxs">2</span>
@@ -59,7 +59,7 @@
          <div class="d-flex justify-content-between ml-4">
             <a href="#" class="d-flex flex-column align-items-center text-decoration-none position-relative">
                 <div class="d-flex align-items-center justify-content-center  border-radius p-4 ">
-                    <i class="fa fa-shopping-cart text-dark lh-lg text-size-xl"></i>
+                    <i class="fa fa-shopping-cart text-dark lh-lg text-size-xxl m-2"></i>
                 </div>
                 <p class="text-size-xs text-dark display-flex align-items-center justify-content-center" > $ 5154.60</p>
                 <span class="text-white bg-blue position-absolute icon-badge mt-2 lh-sm border-small-white text-size-xxs">5</span>
@@ -67,16 +67,67 @@
          </div>        <div class="d-flex justify-content-between ml-4">
             <a href="#" class="d-flex flex-column align-items-center text-decoration-none position-relative">
                 <div class="d-flex align-items-center justify-content-center  border-radius p-4 ">
-                    <i class="fa fa-file-invoice-dollar text-dark lh-lg text-size-xl"></i>
+                    <i class="fa fa-file-invoice-dollar text-dark lh-lg text-size-xxl m-2"></i>
                 </div>
                 <p class="text-size-xs text-dark display-flex align-items-center justify-content-center" > $ 0.00</p>
-                <span class="text-white bg-blue position-absolute icon-badge mt-2 lh-sm border-small-white text-size-xxs">0</span>
+                <span class="text-white bg-blue position-absolute icon-badge mt-2 mr-4 lh-sm border-small-white text-size-xxs">0</span>
             </a>
          </div>
-         
-        
+ </nav>
 
-</nav>
+ <!-- Aside menu -->
+ <div class="d-flex">
+    <aside class="d-flex pr-4" >
+        <ul class="border-dark mt-6 ml-4 max-content pl-4 pr-4">
+            <li class="border-bottom-dark px-4 py-4">
+                <a href="#" class="fas fa-hdd text-blue pr-2"></a>
+                <a href="#" class="text-dark text-size-lg"> Computers & Accessories</a>
+            </li>
+            <li class="border-bottom-dark px-4 py-4">
+                <a href="#" class="fas fa-tv text-blue pr-2"></a
+                ><a href="#" class="text-dark text-size-lg"> TV, Video & Audio</a>
+              </li>
+              <li class="border-bottom-dark px-5 py-4" >
+                <a href="#" class="fas fa-mobile-alt text-blue pr-2 ml-4"></a
+                ><a href="#" class="text-dark text-size-lg"> Smartphones & Tablets</a>
+              </li>
+              <li class="border-bottom-dark px-4 py-4" >
+                <a href="#" class="fas fa-camera-retro text-blue pr-2"></a>
+                <a href="#" class="text-dark text-size-lg"> Photo Cameras</a>
+              </li>
+              <li class="border-bottom-dark px-4 py-4" >
+                <a href="#" class="fas fa-gamepad text-blue pr-2"> </a
+                ><a href="#" class="text-dark text-size-lg"> Video Cameras</a>
+              </li>
+              <li class="border-bottom-dark py-4 px-4" >
+                <a href="#" class="fas fa-headphones text-blue pr-2"></a
+                ><a href="#" class="text-dark text-size-lg"> Headphones</a>
+              </li>
+              <li class="border-bottom-dark px-4 py-4" >
+                <a href="#" class="fas fa-clock text-blue pr-2"></a
+                ><a href="#" class="text-dark text-size-lg"> Wearable Electronics</a>
+              </li>
+              <li class="border-bottom-dark px-4 py-4" >
+                <a href="#" class="fas fa-images text-blue pr-2"></a
+                ><a href="#" class="text-dark text-size-lg"> Printers & Ink</a>
+              </li>
+              <li class="border-bottom-dark px-4 py-4">
+                <a href="#" class="fas fa-crosshairs text-blue pr-2"></a
+                ><a href="#" class="text-dark text-size-lg"> Video Games</a>
+              </li>
+              <li class="border-bottom-dark px-4 py-4">
+                <a href="#" class="fas fa-volume-down text-blue pr-2"></a
+                ><a href="#" class="text-dark text-size-lg"> Speakers & Home Music</a>
+              </li>
+              <li class="px-4 py-4">
+                <a href="#" class="fas fa-server text-blue pr"></a
+                ><a href="#" class="text-dark text-size-lg"> HDD / SSD Data Storage</a>
+              </li>
+        </ul>
+    </aside>
+ </div>
+
+
 <body>
 </body>
 </html>
