aside meny update

--- a/VG.html
+++ b/VG.html
@@ -78,25 +78,25 @@
  <!-- Aside menu -->
  <div class="d-flex">
     <aside class="d-flex pr-4" >
-        <ul class="border-dark mt-6 ml-4 max-content pl-4 pr-4">
+        <ul class="border-dark mt-6 ml-4 max-content pl-6 pr-4">
             <li class="border-bottom-dark px-4 py-4">
                 <a href="#" class="fas fa-hdd text-blue pr-2"></a>
                 <a href="#" class="text-dark text-size-lg"> Computers & Accessories</a>
             </li>
             <li class="border-bottom-dark px-4 py-4">
-                <a href="#" class="fas fa-tv text-blue pr-2"></a
+                <a href="#" class="fas fa-tv text-blue pr-4"></a
                 ><a href="#" class="text-dark text-size-lg"> TV, Video & Audio</a>
               </li>
               <li class="border-bottom-dark px-5 py-4" >
-                <a href="#" class="fas fa-mobile-alt text-blue pr-2 ml-4"></a
+                <a href="#" class="fas fa-mobile-alt text-blue pr-4 ml-4"></a
                 ><a href="#" class="text-dark text-size-lg"> Smartphones & Tablets</a>
               </li>
               <li class="border-bottom-dark px-4 py-4" >
-                <a href="#" class="fas fa-camera-retro text-blue pr-2"></a>
+                <a href="#" class="fas fa-camera text-blue pr-4 "></a>
                 <a href="#" class="text-dark text-size-lg"> Photo Cameras</a>
               </li>
               <li class="border-bottom-dark px-4 py-4" >
-                <a href="#" class="fas fa-gamepad text-blue pr-2"> </a
+                <a href="#" class="fas fa-video text-blue pr-2"> </a
                 ><a href="#" class="text-dark text-size-lg"> Video Cameras</a>
               </li>
               <li class="border-bottom-dark py-4 px-4" >
