--- a/VG.html
+++ b/VG.html
@@ -126,8 +126,16 @@
         </ul>
     </aside>
  </div>
+    <!-- Main section -->
+ <section>
+     <div class="d-flex flex-wrap">
 
+        <!-- Cards -->
+        <div class="d-flex border-dark m-4 flex-row align-items-center grow-card">
 
+        </div>
+     </div>
+ </section>
 <body>
 </body>
 </html>
