--- a/VG.html
+++ b/VG.html
@@ -131,8 +131,8 @@
      <div class="d-flex flex-wrap">
 
         <!-- Cards -->
-        <div class="d-flex border-dark m-4 flex-row align-items-center grow-card">
-
+        <div class="d-flex border-dark m-4 flex-row align-items-center grow-card position-relative">
+                <img class="d-flex img-auto" src="Pics/iMac 18inch.png" alt="Apple 18inch laptop">
         </div>
      </div>
  </section>
