--- a/VG.html
+++ b/VG.html
@@ -42,9 +42,9 @@
             <i class="justify-content-center text-uppercase text-bold text-size-xl">My Store</i>
         </div>        
         <div class="d-flex flex-grow align-items-center justify-content-center  pr-6 ">
-                <i class="d-flex sfield-button fas fa-search justify-content-center align-items-center border-dark ml-4">
+                <i class="d-flex sfield-button fas fa-search  justify-content-center align-items-center text-size-lg border-dark ">
                 </i>
-                <input class="d-flex sfield form-control border-sm border-radius lh-xxl text-size-xl border-dark p-4" size="text-size-xl" type="text" placeholder="Search item..." >
+                <input class="d-flex sfield align-items-center justify-content-center border-dark" placeholder="Search item..." >
         </div>
         <!-- Meny knapparna -->
         <div class="d-flex justify-content-between ml-4">
@@ -125,17 +125,126 @@
               </li>
         </ul>
     </aside>
- </div>
-    <!-- Main section -->
- <section>
-     <div class="d-flex flex-wrap">
 
-        <!-- Cards -->
-        <div class="d-flex border-dark m-4 flex-row align-items-center grow-card position-relative">
-                <img class="d-flex img-auto" src="Pics/iMac 18inch.png" alt="Apple 18inch laptop">
-        </div>
-     </div>
- </section>
+        <!-- Main section -->
+ <section>
+    <div class="d-flex flex-wrap justify-content-center align-items-center p-4">
+
+       <!-- Cards -->
+       <div class="d-flex border-dark m-4 align-items-center grow-card position-relative">
+           <div >
+               <p class="position-absolute discount text-size-xs text-white">20% Off</p>
+               <a href="#" class="text-dark far fa-heart pr-4  justify-content-center" id="card-icon" ></a>
+
+               <img src="Pics/iMac 18inch.png" class="img-auto" alt="Apple laptop 18inch" />
+
+               </div>
+               <div class="pl-4 flex-grow">
+                <div class="display-flex justify-content-between text-dark pt-4 ">
+                  <a href="#"><h4 class="text-dark">Apple Laptop 18inch</h4></a>
+
+
+                </div>
+                <p class="text-size-xs text-grey">Computers & Accessories</p>
+                <p class="text-size-xs pt-2 pb-2">$1999:99</p>
+                <p class="text-size-xs mr-auto pr-4 flex-wrap">
+                  The new Apple 18" <br />Best laptop money can buy according to some made up news magazine.
+                </p>
+                <div class="display-flex justify-content-between pt-4 pb-4">
+                  <a href="#"><i class="fas fa-cart-plus text-dark"></i></a>
+                  <p>2 <a href="#" class="far fa-star pr-4 text-dark"id="card-icon2" ></a></p>
+                </div>
+              </div>
+       </div>
+       <div class="d-flex border-dark m-4 justify-content-center align-items-center mt-4 grow-card position-relative">
+        <div >
+            <p class="position-absolute discount text-size-xs">20% Off</p>
+            <img src="Pics/iMac 18inch.png" class="img-auto" alt="Apple laptop 18inch" />
+            </div>
+            <div class="pl-4 flex-grow">
+             <div class="display-flex justify-content-between text-dark pt-4 ">
+               <a href="#"><h4 class="text-dark">Apple Laptop 18inch</h4></a>
+               <a href="#" class="text-dark far fa-heart pr-4 " id="card-icon" ></a>
+             </div>
+             <p class="text-size-xs text-grey">Computers & Accessories</p>
+             <p class="text-size-xs pt-2 pb-2">$1999:99</p>
+             <p class="text-size-xs mr-auto pr-4 flex-wrap">
+               The new Apple 18" <br />Best laptop money can buy according to some made up news magazine.
+             </p>
+             <div class="display-flex justify-content-between pt-4 pb-4">
+               <a href="#"><i class="fas fa-cart-plus text-dark"></i></a>
+               <p>2 <a href="#" class="far fa-star pr-4 text-dark"id="card-icon2" ></a></p>
+             </div>
+           </div>
+    </div>
+    <div class="d-flex border-dark m-4 justify-content-center align-items-center mt-4 grow-card position-relative">
+        <div >
+            <p class="position-absolute discount text-size-xs">20% Off</p>
+            <img src="Pics/iMac 18inch.png" class="img-auto" alt="Apple laptop 18inch" />
+            </div>
+            <div class="pl-4 flex-grow">
+             <div class="display-flex justify-content-between text-dark pt-4 ">
+               <a href="#"><h4 class="text-dark">Apple Laptop 18inch</h4></a>
+               <a href="#" class="text-dark far fa-heart pr-4 " id="card-icon" ></a>
+             </div>
+             <p class="text-size-xs text-grey">Computers & Accessories</p>
+             <p class="text-size-xs pt-2 pb-2">$1999:99</p>
+             <p class="text-size-xs mr-auto pr-4 flex-wrap">
+               The new Apple 18" <br />Best laptop money can buy according to some made up news magazine.
+             </p>
+             <div class="display-flex justify-content-between pt-4 pb-4">
+               <a href="#"><i class="fas fa-cart-plus text-dark"></i></a>
+               <p>2 <a href="#" class="far fa-star pr-4 text-dark"id="card-icon2" ></a></p>
+             </div>
+           </div>
+    </div>
+    <div class="d-flex border-dark m-4 justify-content-center align-items-center mt-4 grow-card position-relative">
+        <div >
+            <p class="position-absolute discount text-size-xs">20% Off</p>
+            <img src="Pics/iMac 18inch.png" class="img-auto" alt="Apple laptop 18inch" />
+            </div>
+            <div class="pl-4 flex-grow">
+             <div class="display-flex justify-content-between text-dark pt-4 ">
+               <a href="#"><h4 class="text-dark">Apple Laptop 18inch</h4></a>
+               <a href="#" class="text-dark far fa-heart pr-4 " id="card-icon" ></a>
+             </div>
+             <p class="text-size-xs text-grey">Computers & Accessories</p>
+             <p class="text-size-xs pt-2 pb-2">$1999:99</p>
+             <p class="text-size-xs mr-auto pr-4 flex-wrap">
+               The new Apple 18" <br />Best laptop money can buy according to some made up news magazine.
+             </p>
+             <div class="display-flex justify-content-between pt-4 pb-4">
+               <a href="#"><i class="fas fa-cart-plus text-dark"></i></a>
+               <p>2 <a href="#" class="far fa-star pr-4 text-dark"id="card-icon2" ></a></p>
+             </div>
+           </div>
+    </div>
+    <div class="d-flex border-dark m-4 justify-content-center align-items-center mt-4 grow-card position-relative">
+        <div >
+            <p class="position-absolute discount text-size-xs">20% Off</p>
+            <img src="Pics/iMac 18inch.png" class="img-auto" alt="Apple laptop 18inch" />
+            </div>
+            <div class="pl-4 flex-grow">
+             <div class="display-flex justify-content-between text-dark pt-4 ">
+               <a href="#"><h4 class="text-dark">Apple Laptop 18inch</h4></a>
+               <a href="#" class="text-dark far fa-heart pr-4 " id="card-icon" ></a>
+             </div>
+             <p class="text-size-xs text-grey">Computers & Accessories</p>
+             <p class="text-size-xs pt-2 pb-2">$1999:99</p>
+             <p class="text-size-xs mr-auto pr-4 flex-wrap">
+               The new Apple 18" <br />Best laptop money can buy according to some made up news magazine.
+             </p>
+             <div class="display-flex justify-content-between pt-4 pb-4">
+               <a href="#"><i class="fas fa-cart-plus text-dark"></i></a>
+               <p>2 <a href="#" class="far fa-star pr-4 text-dark"id="card-icon2" ></a></p>
+             </div>
+           </div>
+    </div>
+    </div>
+    </div>
+</section>
+ </div>
+
 <body>
 </body>
 </html>
